--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,28 @@
         {% block body %}
         
         {% endblock body %}
+<section class="">
+    <!-- Footer -->
+    <footer class="text-center text-white" style="background-color: #0a4275;">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+
+
+            <span class="me-3">Source Code on </span>
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color:#6C63FF">
+            © 2021 Copyright: Ternalt's
+
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+</section>
 
 
 
