--- a/templates/chartapp/about.html
+++ b/templates/chartapp/about.html
@@ -4,178 +4,158 @@
 {% load static %}
 
 <style>
-    
-.social-link {
-  width: 30px;
-  height: 30px;
-  border: 1px solid #ddd;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #666;
-  border-radius: 50%;
-  transition: all 0.3s;
-  font-size: 0.9rem;
-}
-
-.social-link:hover,
-.social-link:focus {
-  background: #ddd;
-  text-decoration: none;
-  color: #555;
-}
+    .image{
+        width: 100px;
+    }
 </style>
 
 
 <div class="container">
     
     
-    <div class="bg-light">
-        <div class="container py-5">
-            <div class="row h-100 align-items-center py-5">
-                <div class="col-lg-6">
-                    <h1 class="display-4">About us page</h1>
-                    <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-                    <p class="lead text-muted">Snippet by <a href="media/main1.png" class="text-muted">
-                            <u>Bootstrapious</u></a>
-                    </p>
+<div class="container">
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h1 style="padding: 160px;">About Us!!</h1>
                 </div>
-                <div class="col-lg-6 d-none d-lg-block"><img
-                        src="{% static 'media/main2.png' %}" alt=""
-                        class="img-fluid"></div>
-            </div>
-        </div>
-    </div>
-    
-    <div class="bg-white py-5">
-        <div class="container py-5">
-            <div class="row align-items-center mb-5">
-                <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-                    <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-                    <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#"
-                        class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
-                </div>
-                <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-                        src="https://res.cloudinary.com/mhmd/image/upload/v1556834139/img-1_e25nvh.jpg" alt=""
-                        class="img-fluid mb-4 mb-lg-0"></div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-lg-5 px-5 mx-auto"><img
-                        src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/img-2_vdgqgn.jpg" alt=""
-                        class="img-fluid mb-4 mb-lg-0"></div>
-                <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-                    <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-                    <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#"
-                        class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
+                <div class="col-lg-6 col-md-12">
+                    <div class="img-fluid">
+                        <img src="https://github.com/kothawleprem/chartz/blob/main/media/main5.png?raw=true"
+                            alt="About us" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    
-    <div class="bg-light py-5">
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="img-fluid">
+                        <img src="https://github.com/kothawleprem/chartz/blob/main/media/quickchart_logo.png?raw=true" alt="About us"
+                            class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title">
+                    <strong>
+                        QuickChart is an API for generating chart images, PDFs, and QR codes. We're built on Chart.js, the most popular
+                        open-source charting
+                    </strong>
+                    
+                    <a type="button" href="/files" class="btn btn-warning">QuickChart</a>
+                </div>
+            </div>
+        </div>
+    </section>
+<br>
+<br>
+<br>
+<br>
+        <section class="services-area" id="services">
+            <div class="container"
+                style="background: white;border-radius: 10px;box-shadow: 10px 10px 5px grey;">
+                <div class="row">
+                    <div class="col-lg-12 text-center service-title">
+                        <h1 class="text-uppercase title-text">Technology</h1>
+        
+                    </div>
+                </div>
+                <div class="container services-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-12 col-sm-12">
+                            <div class="services" style="border-radius: 10px;">
+                                <div class="services-img text-center py-4">
+                                    <img class="image"
+                                        srcset="https://github.com/kothawleprem/chartz/blob/main/media/django.png?raw=true"
+                                        alt="Service-1">
+                                </div>
+                                <h5 class="card-body text-uppercase text-center font-roboto">Django</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12">
+                            <div class="services" style="border-radius: 10px;">
+                                <div class="services-img text-center py-4">
+                                    <img class="image" srcset="https://github.com/kothawleprem/chartz/blob/main/media/python.png?raw=true" alt="Service-1">
+                                </div>
+                                <h5 class="card-body text-uppercase text-center font-roboto">Python</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12">
+                            <div class="services" style="border-radius: 10px;">
+                                <div class="services-img text-center py-4">
+                                    <img class="image"
+                                        srcset="https://github.com/kothawleprem/chartz/blob/main/media/htmlcss.png?raw=true"
+                                        alt="Service-1">
+                                </div>
+                                <h5 class="card-body text-uppercase text-center font-roboto">HTML & CSS</h5>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12">
+                            <div class="services" style="border-radius: 10px;">
+                                <div class="services-img text-center py-4">
+                                    <img class="image" src="https://github.com/kothawleprem/chartz/blob/main/media/bootstrap.png?raw=true" alt="Service-1">
+                                </div>
+                                <h5 class="card-body text-uppercase text-center font-roboto">Bootstrap</h5>
+                            </div>
+                        </div>
+        
+        
+                    </div>
+                </div>
+        
+        
+            </div>
+        </section>
+<br>
+<br>
+
         <div class="container py-5">
             <div class="row mb-4">
-                <div class="col-lg-5">
-                    <h2 class="display-4 font-weight-light">Our team</h2>
-                    <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="col-lg-12 text-center service-title">
+            <h1 class="text-uppercase title-text">Our Team</h1>
+        </div>
+
                 </div>
             </div>
-    
-            <div class="row text-center">
+     <div class="row text-center">
+ 
+   
                 <!-- Team item-->
-                <div class="col-xl-3 col-sm-6 mb-5">
+                <div class="col-xl-6 col-sm-6 mb-5">
                     <div class="bg-white rounded shadow-sm py-5 px-4"><img
-                            src="https://res.cloudinary.com/mhmd/image/upload/v1556834132/avatar-4_ozhrib.png" alt=""
+                            src="https://pbs.twimg.com/profile_images/1368812915965390851/n83dF28V_400x400.jpg" alt=""
                             width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                        <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO -
-                            Founder</span>
-                        <ul class="social mb-0 list-inline mt-3">
-                            <li class="list-inline-item"><a href="#" class="social-link"><i
-                                        class="fa fa-facebook-f"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <h5 class="mb-0">Prem Kothawle</h5>
+                        <button type="button" class="btn btn-primary"><i class="fab fa-github left"></i> Github</button>
+
+
                     </div>
                 </div>
                 <!-- End-->
     
                 <!-- Team item-->
-                <div class="col-xl-3 col-sm-6 mb-5">
+                <div class="col-xl-6 col-sm-6 mb-5">
                     <div class="bg-white rounded shadow-sm py-5 px-4"><img
-                            src="https://res.cloudinary.com/mhmd/image/upload/v1556834130/avatar-3_hzlize.png" alt=""
+                            src="https://fiverr-res.cloudinary.com/t_profile_original,q_auto,f_auto/attachments/profile/photo/853a71bb0f859484926231c1afddaf06-1591471754498/ae708205-f8ce-4667-9159-8e9e97090085.jpeg" alt=""
                             width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                        <h5 class="mb-0">Samuel Hardy</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-                        <ul class="social mb-0 list-inline mt-3">
-                            <li class="list-inline-item"><a href="#" class="social-link"><i
-                                        class="fa fa-facebook-f"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <h5 class="mb-0">Shubham Saroj</h5>
+                        <button type="button" class="btn btn-primary"><i class="fab fa-github left"></i> Github</button>
                     </div>
                 </div>
                 <!-- End-->
-    
-                <!-- Team item-->
-                <div class="col-xl-3 col-sm-6 mb-5">
-                    <div class="bg-white rounded shadow-sm py-5 px-4"><img
-                            src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-2_f8dowd.png" alt=""
-                            width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                        <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO -
-                            Founder</span>
-                        <ul class="social mb-0 list-inline mt-3">
-                            <li class="list-inline-item"><a href="#" class="social-link"><i
-                                        class="fa fa-facebook-f"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- End-->
-    
-                <!-- Team item-->
-                <div class="col-xl-3 col-sm-6 mb-5">
-                    <div class="bg-white rounded shadow-sm py-5 px-4"><img
-                            src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-1_s02nlg.png" alt=""
-                            width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                        <h5 class="mb-0">John Tarly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-                        <ul class="social mb-0 list-inline mt-3">
-                            <li class="list-inline-item"><a href="#" class="social-link"><i
-                                        class="fa fa-facebook-f"></i></a></li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- End-->
-    
+ 
             </div>
         </div>
     </div>
-    
-    
-    <footer class="bg-light pb-5">
-        <div class="container text-center">
-            <p class="font-italic text-muted mb-0">&copy; Copyrights Company.com All rights reserved.</p>
-        </div>
-    </footer>
+
 </div>
 
 
