--- a/templates/chartapp/charts.html
+++ b/templates/chartapp/charts.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% block title %} Charts {% endblock title %}
+{% block chartsactive %}active{% endblock chartsactive %}
 {% block body %}
 
 <h1>All different charts used by us!!!</h1>
-
+<style>
+    
+</style>
 {% endblock body %}
