--- a/templates/chartapp/output.html
+++ b/templates/chartapp/output.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Output {% endblock title %}
+{% block homeactive %}active{% endblock homeactive %}
 {% block body %}
 
 <style>
