--- a/templates/files/upload_csv.html
+++ b/templates/files/upload_csv.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% block title %} Home {% endblock title %}
+{% block homeactive %}active{% endblock homeactive %}
 {% load crispy_forms_tags %}
 
 {% block body %}
 
     {% if format == "png" %}
     <center>
-        <h2>Here's Your Chart!!!</h2>
+        <h2  style="font-family: 'lora', sans-serif;">Here's Your Chart!!</h2>
             <img src="{{my_url}}">
 
     </center>
@@ -14,7 +15,7 @@
     
     {% elif format == "pdf" %}
     <center>
-        <h2>Here's Your Chart!!!</h2>
+        <h2  style="font-family: 'lora', sans-serif;">Here's Your Chart!!!</h2>
     </center>
     <embed src="{{my_url}}" type="application/pdf" width="100%" height="750px" />
 
