--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
 
             <span class="me-3">Source Code on </span>
             <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" target="_blank" href="https://github.com/kothawleprem/chartz" role="button"><i class="fab fa-github"></i></a>
         </div>
         <!-- Grid container -->
 
