--- a/templates/chartapp/index.html
+++ b/templates/chartapp/index.html
@@ -21,7 +21,7 @@
                             Enter your data to get instant results.
                         </li>
                         <li>
-                            12 Different Types of Charts + QR Code in PNG of PDF Format.
+                            12 Different Types of Charts + QR Code in PNG or PDF Format.
                         </li>
                         <li>
                             Creates and delivers via E-mail within minutes for easy analysis.
