--- a/templates/chartapp/index.html
+++ b/templates/chartapp/index.html
@@ -30,7 +30,7 @@
                             Upload CSV files for large data.
                         </li>
                     </ul>
-                    <a type="button" href="#generate" class="btn btn-warning">Get Started</a>
+                    <a type="button" href="#generate" class="btn btn-warning">Get Started - Manually</a>
                 </div>
                 <div class="col-lg-6 col-md-12" style="padding-top: 40px;">
                     <div class="img-fluid">
@@ -41,13 +41,41 @@
         </div>
     </section>
 
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12" style="padding-top: 0px;">
+                    <div class="img-fluid">
+                        <img src="https://github.com/kothawleprem/chartz/blob/main/media/main1.png?raw=true" alt="About us"
+                            class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title" style="padding-top: 0px;">
+                    <h2 class="text-uppercase pt-5" style="font-family: 'lora', serif;">
+                        <span>Have</span>
+                        <span>A</span>
+                        <span>CSV File?</span>
+                    </h2>
+                    <div class="paragraph py w-75">
+                        <p class="para">
+                            Just Upload and Get Charts in Your Inbox!
+                        </p>
+    
+                    </div>
+                    <a type="button" href="/files" class="btn btn-warning">CSV File</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <div id="form-main">
         <div id="form-div">
             <table>
     
                 <form class="well form-horizontal" action="" method="post">
                     <h1>
-                        <p id="generate" style="text-align:center; font-family: 'lora', sans-serif;">Let's Start!</p>
+                        <p id="generate" style="text-align:center; font-family: 'lora', sans-serif;">Don't Have A CSV file? We Got You Covered As Well </p>
                     </h1>
     
                     <fieldset>
@@ -64,31 +92,6 @@
             </fieldset>
             </form>
 
-<section class="about-area">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-6 col-md-12" style="padding-top: 20px;">
-                <div class="img-fluid">
-                    <img src="https://github.com/kothawleprem/chartz/blob/main/media/main1.png?raw=true" alt="About us" class="img-fluid">
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 about-title" style="padding-top: 60px;">
-                <h2 class="text-uppercase pt-5" style="font-family: 'lora', serif;">
-                    <span>Have</span>
-                    <span>A</span>
-                    <span>CSV File?</span>
-                </h2>
-                <div class="paragraph py w-75">
-                    <p class="para">
-                        We have Covered it Too.
-                    </p>
-
-                </div>
-                <a type="button" href="/files" class="btn btn-warning">CSV File</a>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section class="about-area">
     <div class="container-fluid">
