--- a/templates/chartapp/about.html
+++ b/templates/chartapp/about.html
@@ -53,7 +53,7 @@
                         open-source charting.
                     </p>
                     
-                    <a type="button" href="/files" class="btn btn-warning">QuickChart</a>
+                    <a type="button" target="_blank" href="https://quickchart.io/" class="btn btn-warning">QuickChart</a>
                 </div>
             </div>
         </div>
