--- a/templates/chartapp/index.html
+++ b/templates/chartapp/index.html
@@ -30,7 +30,7 @@
                             Upload CSV files for large data.
                         </li>
                     </ul>
-                    <a type="button" href="#generate" class="btn btn-warning">Get Started - Manually</a>
+                    <a type="button" href="#generate" class="btn btn-warning">Get Started</a>
                 </div>
                 <div class="col-lg-6 col-md-12" style="padding-top: 40px;">
                     <div class="img-fluid">
@@ -62,7 +62,7 @@
                         </p>
     
                     </div>
-                    <a type="button" href="/files" class="btn btn-warning">CSV File</a>
+                    <a type="button" href="/files" class="btn btn-warning">Upload CSV File</a>
                 </div>
             </div>
         </div>
