--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -41,6 +41,33 @@
             </div>
         </div>
     </section>
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12" style="padding-top: 0px;">
+                    <div class="img-fluid">
+                        <img src="https://github.com/kothawleprem/chartz/blob/main/media/format.PNG?raw=true" alt="About us"
+                            class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title" style="padding-top: 0px;">
+                    <h2 class="text-uppercase pt-5" style="font-family: 'lora', serif;">
+                        <span>Format</span>
+                        <span>Of</span>
+                        <span>CSV File</span>
+                    </h2>
+                    <div class="paragraph py w-75">
+                        <p class="para">
+                            1st five rows are Reserved!!
+                        </p>
+
+    
+                    </div>
+                    <a type="button" href="https://srv-store3.gofile.io/download/3M1WgZ/4604ef3d35684e673adfc97a1e84295c/data.csv" class="btn btn-warning" >Sample CSV File</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 </br>
 </br>
