Update minor bugs

--- a/templates/chartapp/about.html
+++ b/templates/chartapp/about.html
@@ -135,8 +135,8 @@
                 <!-- Team item-->
                 <div class="col-xl-6 col-sm-6 mb-5">
                     <div class="bg-white rounded shadow-sm py-5 px-4"><img
-                            src="https://pbs.twimg.com/profile_images/1368812915965390851/n83dF28V_400x400.jpg" alt=""
-                            width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                            src="https://kothawleprem.tech/static/media/Prem_Updated_Photo.824d739b.JPG" alt=""
+                            width="100" style="height:100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                         <h5 class="mb-0">Prem Kothawle</h5>
                         <a type="button" target="_blank" href="https://github.com/kothawleprem" class="btn btn-primary"><i class="fab fa-github left"></i> Github</a>
 
