--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
 
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color:#6C63FF">
-            © 2021 Copyright: Ternalt's
+            © 2021 Copyright: Debug Thugs
 
         </div>
         <!-- Copyright -->
